A.F....... [ZBX-4311] fixed graph prototype name validation (pavels)
A.F....... [ZBXNEXT-906] redesign Configuration->Host groups (Eduard)
....I..... [ZBX-4024] new build process for database schema and data, also new location of database related files; db data file uses transactions now (Alexei)

Bug fixes:
....I...S. [ZBX-4555] fix compilation error on Solaris (get rid of INT_MAX dependency) (dimir, Sasha)
..F....... [ZBX-4523] fixed impossibility to correctly translate some parts of Zabbix (sanja)
..F....... [ZBX-4513] refactored value mappings form (Vedmak)
..F....... [ZBX-4477] fixed new expressions created on each Zabbix regexp update (Vedmak)
..F....... [ZBXNEXT-1058] fixed confirmation pop-up showing up on auto refresh in latest data (pavels)
....I..... [ZBX-2701] removed empty value mappings from a default data (Sasha)
A.F....... [ZBX-4505] fixed global macro recreation instead of updating (pavels)
..F....... [ZBX-4505] fixed audit message appearing when saving an unchanged global macro (pavels)
A......... [ZBX-4519] fixed impossibility to delete template : Unknown column 'h.name' (sanja)
..F....... [ZBX-4468] removed possibility to add to value mappings few items with same name (Slava)
..F....... [ZBX-4483] added proper icon image resizing (pavels)
..F....... [ZBX-4456] fixed error position in IT services form (Vedmak)
..F....... [ZBX-4470] fixed node initialization in DM setup (pavels)
..F....... [ZBX-4407] fixed import hosts from 1.8 version (sanja)
A......... [ZBX-4425] fixed item prototype interface mapping when cloning a discovery rule (pavels)
..F....... [ZBX-4459] fixed values are cleared when try to add incorrect value mapping, negative values now allowed (Vedmak)
..F....... [ZBX-4458] fixed js error in global macro form, changed layout to be consistant with other places (Vedmak)
..F....... [ZBX-4449] fixed IT services SLA graph permission checks (pavels)
A......... [ZBX-4448] fixed proxy interface validation (pavels)