@@ -70,15 +70,15 @@ if (isset($_REQUEST['save'])) {
 
 			// search for duplicates items in new macros array
 			foreach ($newMacros as $duplicateNumber => $duplicateNewMacro) {
-				if ($number != $duplicateNumber && $newMacro['macro'] == $duplicateNewMacro['macro']) {
-					$duplicatedMacros[] = '"'.$duplicateNewMacro['macro'].'"';
+				if ($number != $duplicateNumber && $newMacros[$number]['macro'] == $duplicateNewMacro['macro']) {
+					$duplicatedMacros[] = '"'.$newMacros[$number]['macro'].'"';
 				}
 			}
 		}
 
 		// validate duplicates macros
 		if (!empty($duplicatedMacros)) {
-			throw new Exception(_('More than one macro with same name found:').SPACE.implode(', ', array_unique($duplicatedMacros)));
+			throw new Exception(_s('More than one macro with same name found: %1$s .', implode(', ', array_unique($duplicatedMacros))));
 		}
 
 		// update
